--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Dispense. Cure. Repeat.
           </h1>
           <p class="mt-4 text-lg text-slate-700 max-w-xl">
-            A complete bench‑top platform that integrates precision dispensing and UV‑LED curing in one compact unit. Dual‑operator. No pneumatics. Plug‑and‑play. Launch price ≈ <span class="font-semibold">$4,900</span>.
+            A complete bench‑top platform that integrates precision dispensing and UV‑LED curing in one compact unit. Dual‑operator, independent programs at the same time. No pneumatics. Plug‑and‑play. Launch price ≈ <span class="font-semibold">$4,900</span>.
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
             <a href="#contact" class="px-5 py-3 rounded-2xl bg-[var(--brand)] text-white font-semibold shadow-soft">Request a Demo</a>
@@ -79,7 +79,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="mb-10">
         <h2 class="text-2xl sm:text-3xl font-extrabold">Why it’s different</h2>
-        <p class="mt-2 text-slate-600 max-w-2xl">Compared to modular systems from Dymax, LOCTITE, and Nordson, Anucro eliminates separate cure lights, foot pedals, and extra controllers—reducing cost, footprint, and setup time.</p>
+        <p class="mt-2 text-slate-600 max-w-2xl">Compared to systems from Dymax, LOCTITE, and Nordson, Anucro eliminates separate UV/LED generators, light guides, utilities, and extra controllers—reducing cost, footprint, and setup time. We add a dual operator approach to allow operators to work simultaneously on the same product or on completely different products at the same time.</p>
       </div>
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <div class="bg-white border border-slate-200 rounded-2xl p-6 shadow-soft">
