--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <h3 class="font-semibold">Dymax / LOCTITE / Nordson</h3>
           <ul class="mt-3 space-y-2 text-slate-700 list-disc list-inside">
             <li>Modular systems (dispense and cure sold separately)</li>
-            <li>Requires pneumatics (air), light guides, foot pedals</li>
+            <li>Requires pneumatics (air), light guides, barrels, etc.</li>
             <li>Higher total cost & integration time</li>
           </ul>
         </div>
@@ -186,7 +186,7 @@
       <div class="grid lg:grid-cols-2 gap-8 items-center">
         <div>
           <h2 class="text-2xl sm:text-3xl font-extrabold">See it in action</h2>
-          <p class="mt-3 text-slate-600">Short demo: load → dispense → cure → done. Keep it under 40 seconds. If you don’t have video yet, drop a few photos and add captions.</p>
+          <p class="mt-3 text-slate-600">To be demoed soon</p>
           <ul class="mt-4 space-y-2 text-slate-700 list-disc list-inside">
             <li>Highlight cure time and dual‑operator flow</li>
             <li>Show bench‑top footprint and plug‑in power</li>
