--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
     body{ font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
     .glass{ backdrop-filter: blur(10px); background: rgba(255,255,255,.1); }
     .shadow-soft{ box-shadow: 0 10px 30px rgba(2,6,23,.08); }
-    @keyframes pop {
-  0% { transform: scale(.9); opacity: 0; }
-  60% { transform: scale(1.03); opacity: 1; }
-  100% { transform: scale(1); }
-}
-.pop-in { animation: pop .35s ease-out both; }
+    /* Success pop animation */
+    @keyframes pop { 0% { transform: scale(.9); opacity: 0; } 60% { transform: scale(1.03); opacity: 1; } 100% { transform: scale(1); } }
+    .pop-in { animation: pop .35s ease-out both; }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
@@ -47,12 +44,8 @@
     <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
-          <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight text-slate-900">
-            Dispense. Cure. Repeat.
-          </h1>
-          <p class="mt-4 text-lg text-slate-700 max-w-xl">
-            A complete bench‑top platform that integrates precision dispensing and UV‑LED curing in one compact unit. Dual‑operator, independent programs at the same time. No pneumatics. Plug‑and‑play. Launch price ≈ <span class="font-semibold">$4,900</span>.
-          </p>
+          <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight text-slate-900">Dispense. Cure. Repeat.</h1>
+          <p class="mt-4 text-lg text-slate-700 max-w-xl">A complete bench‑top platform that integrates precision dispensing and UV‑LED curing in one compact unit. Dual‑operator, independent programs at the same time. No pneumatics. Plug‑and‑play. Launch price ≈ <span class="font-semibold">$4,900</span>.</p>
           <div class="mt-6 flex flex-wrap gap-3">
             <a href="#contact" class="px-5 py-3 rounded-2xl bg-[var(--brand)] text-white font-semibold shadow-soft">Request a Demo</a>
             <a href="#specs" class="px-5 py-3 rounded-2xl bg-white border border-slate-200 text-slate-800 font-semibold shadow-soft">View Specs</a>
@@ -72,8 +65,7 @@
           </div>
           <div class="absolute -bottom-6 -left-6 bg-white border border-slate-200 shadow-soft rounded-2xl p-4 text-sm">
             <div class="font-semibold">All‑in‑one</div>
-            <div class="text-slate-600">Dispense + UV‑LED cure
-            </div>
+            <div class="text-slate-600">Dispense + UV‑LED cure</div>
           </div>
         </div>
       </div>
@@ -212,84 +204,97 @@
       <div class="bg-white border border-slate-200 rounded-2xl p-8 shadow-soft">
         <h2 class="text-2xl sm:text-3xl font-extrabold">Request a Demo</h2>
         <p class="mt-2 text-slate-600">Tell us a bit about your application and we’ll get back to you.</p>
-<form id="demoForm" class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
 
-  <!-- 🔹 Web3Forms hidden keys -->
-  <input type="hidden" name="access_key" value="137e4aaf-e723-4bee-8405-6022ecd8b23b">
-  <input type="hidden" name="subject" value="New Demo Request from anucro.com">
-  <input type="hidden" name="from_name" value="Anucro Exacta Website">
+        <form id="demoForm" class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <!-- Web3Forms hidden keys -->
+          <input type="hidden" name="access_key" value="137e4aaf-e723-4bee-8405-6022ecd8b23b">
+          <input type="hidden" name="subject" value="New Demo Request from anucro.com">
+          <input type="hidden" name="from_name" value="Anucro Exacta Website">
 
-  <div>
-    <label class="block text-sm font-medium text-slate-700">Name</label>
-    <input required name="name" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Your name" />
-  </div>
-  <div>
-    <label class="block text-sm font-medium text-slate-700">Email</label>
-    <input required type="email" name="email" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="you@company.com" />
-  </div>
-  <div class="sm:col-span-2">
-    <label class="block text-sm font-medium text-slate-700">Company</label>
-    <input name="company" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Company or team" />
-  </div>
-  <div class="sm:col-span-2">
-    <label class="block text-sm font-medium text-slate-700">Use case</label>
-    <textarea name="usecase" rows="4" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Electronics R&D, medical, small-batch, etc."></textarea>
-  </div>
-  <div class="sm:col-span-2 flex items-center justify-between gap-3">
-    <button class="px-5 py-3 rounded-2xl bg-[var(--brand)] text-white font-semibold shadow-soft" type="submit">Send Request</button>
-    <p id="formMsg" class="text-sm text-slate-600"></p>
-  </div>
-</form>
+          <div>
+            <label class="block text-sm font-medium text-slate-700">Name</label>
+            <input required name="name" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Your name" />
+          </div>
+          <div>
+            <label class="block text-sm font-medium text-slate-700">Email</label>
+            <input required type="email" name="email" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="you@company.com" />
+          </div>
+          <div class="sm:col-span-2">
+            <label class="block text-sm font-medium text-slate-700">Company</label>
+            <input name="company" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Company or team" />
+          </div>
+          <div class="sm:col-span-2">
+            <label class="block text-sm font-medium text-slate-700">Use case</label>
+            <textarea name="usecase" rows="4" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[var(--brand)]" placeholder="Electronics R&D, medical, small-batch, etc."></textarea>
+          </div>
+          <div class="sm:col-span-2 flex items-center justify-between gap-3">
+            <button class="px-5 py-3 rounded-2xl bg-[var(--brand)] text-white font-semibold shadow-soft" type="submit">Send Request</button>
+            <p id="formMsg" class="text-sm text-slate-600"></p>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
 
-<!-- JS handler for inline confirmation -->
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
+  <!-- FOOTER -->
+  <footer class="py-10 text-sm text-slate-600">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col sm:flex-row items-center justify-between gap-4">
+      <div>© <span id="year"></span> Anucro. All rights reserved.</div>
+      <div class="flex items-center gap-4">
+        <a href="#" class="hover:text-slate-900">Privacy</a>
+        <a href="#" class="hover:text-slate-900">Terms</a>
+      </div>
+    </div>
+  </footer>
 
-  const form = document.getElementById('demoForm');
-  const msg  = document.getElementById('formMsg');
-  const submitBtn = form.querySelector('button[type="submit"]');
+  <!-- JS handler for inline confirmation (Web3Forms) -->
+  <script>
+    // year
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-  const WEB3_ENDPOINT = "https://api.web3forms.com/submit";
+    const form = document.getElementById('demoForm');
+    const msg  = document.getElementById('formMsg');
+    const submitBtn = form.querySelector('button[type="submit"]');
+    const WEB3_ENDPOINT = 'https://api.web3forms.com/submit';
 
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault(); // stop native submit / redirect
 
-    // UI: sending state
-    submitBtn.disabled = true;
-    submitBtn.classList.add('opacity-60', 'cursor-not-allowed');
-    msg.textContent = "Sending...";
-    msg.className = "text-sm text-slate-600";
+      // UI sending state
+      submitBtn.disabled = true;
+      submitBtn.classList.add('opacity-60','cursor-not-allowed');
+      msg.textContent = 'Sending...';
+      msg.className = 'text-sm text-slate-600';
 
-    try {
-      const res = await fetch(WEB3_ENDPOINT, {
-        method: 'POST',
-        body: new FormData(form)  // includes your hidden access_key + fields
-      });
+      try {
+        const res = await fetch(WEB3_ENDPOINT, {
+          method: 'POST',
+          body: new FormData(form) // includes hidden access_key + fields
+        });
+        const json = await res.json().catch(() => ({}));
 
-      const json = await res.json().catch(() => ({}));
-
-      if (res.ok) {
-        form.reset();
-        msg.innerHTML = `
-          <span class="inline-flex items-center gap-2 pop-in">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-              <path d="M20 6L9 17l-5-5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            Thanks! We’ll be in touch.
-          </span>`;
-        msg.className = "text-sm text-emerald-600";
-      } else {
-        msg.textContent = json?.message || "Couldn’t send. Try again or email admin@anucro.com.";
-        msg.className = "text-sm text-rose-600";
+        if (res.ok) {
+          form.reset();
+          msg.innerHTML = `
+            <span class="inline-flex items-center gap-2 pop-in">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                <path d="M20 6L9 17l-5-5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              Thanks! We’ll be in touch.
+            </span>`;
+          msg.className = 'text-sm text-emerald-600';
+        } else {
+          msg.textContent = (json && json.message) ? json.message : 'Couldn’t send. Try again or email admin@anucro.com.';
+          msg.className = 'text-sm text-rose-600';
+        }
+      } catch (err) {
+        msg.textContent = 'Network error. Email admin@anucro.com.';
+        msg.className = 'text-sm text-rose-600';
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.classList.remove('opacity-60','cursor-not-allowed');
       }
-    } catch (err) {
-      msg.textContent = "Network error. Email admin@anucro.com.";
-      msg.className = "text-sm text-rose-600";
-    } finally {
-      submitBtn.disabled = false;
-      submitBtn.classList.remove('opacity-60', 'cursor-not-allowed');
-    }
-  });
-</script>
+    });
+  </script>
 </body>
 </html>
