--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     /* Success pop animation */
     @keyframes pop { 0% { transform: scale(.9); opacity: 0; } 60% { transform: scale(1.03); opacity: 1; } 100% { transform: scale(1); } }
     .pop-in { animation: pop .35s ease-out both; }
+    /* Hero carousel (fade between images without any library) */
+.hero-carousel img{
+  position:absolute; inset:0;
+  width:100%; height:100%; object-fit:cover;
+  opacity:0; transition:opacity .6s ease;
+}
+.hero-carousel img.is-active{ opacity:1; }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
@@ -57,12 +64,15 @@
           </div>
         </div>
         <div class="relative">
-          <div class="aspect-[4/3] rounded-3xl bg-white border border-slate-200 shadow-soft grid place-items-center">
-            <div class="text-center p-8">
-              <div class="text-slate-400">Product image placeholder</div>
-              <div class="mt-2 text-xs text-slate-500">Replace this box with a photo of the Anucro Exacta Duo.</div>
-            </div>
-          </div>
+<!-- HERO IMAGE CAROUSEL -->
+<div id="heroCarousel"
+     class="aspect-[4/3] rounded-3xl bg-white border border-slate-200 shadow-soft
+            overflow-hidden relative hero-carousel">
+  <!-- Images you uploaded to /images/ -->
+  <img src="images/photo1.jpg" alt="Anucro Exacta Duo — angle 1" loading="eager">
+  <img src="images/photo2.jpg" alt="Anucro Exacta Duo — angle 2" loading="lazy">
+  <img src="images/photo3.png" alt="Anucro Exacta Duo — detail" loading="lazy">
+</div>
           <div class="absolute -bottom-6 -left-6 bg-white border border-slate-200 shadow-soft rounded-2xl p-4 text-sm">
             <div class="font-semibold">All‑in‑one</div>
             <div class="text-slate-600">Dispense + UV‑LED cure</div>
@@ -295,6 +305,24 @@
         submitBtn.classList.remove('opacity-60','cursor-not-allowed');
       }
     });
+    // === HERO CAROUSEL (simple fade loop) ===
+(function(){
+  const wrap = document.getElementById('heroCarousel');
+  if (!wrap) return;
+  const imgs = wrap.querySelectorAll('img');
+  if (!imgs.length) return;
+
+  // show first image immediately
+  let i = 0;
+  imgs[0].classList.add('is-active');
+
+  // rotate every 4 seconds
+  setInterval(() => {
+    imgs[i].classList.remove('is-active');
+    i = (i + 1) % imgs.length;
+    imgs[i].classList.add('is-active');
+  }, 4000);
+})();
   </script>
 </body>
 </html>
