--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="relative">
 <!-- HERO IMAGE CAROUSEL -->
 <div id="heroCarousel"
-     class="rounded-3xl bg-white border border-slate-200 shadow-soft overflow-hidden hero-carousel">
+     class="relative aspect-[4/3] min-h-[240px] rounded-3xl bg-white border border-slate-200 shadow-soft overflow-hidden hero-carousel">
   <img src="images/photo1.jpg" alt="Anucro Exacta Duo — angle 1" class="is-active" loading="eager">
   <img src="images/photo2.jpg" alt="Anucro Exacta Duo — angle 2" loading="lazy">
   <img src="images/photo3.png" alt="Anucro Exacta Duo — detail" loading="lazy">
